--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/library
 spring.datasource.username=root
 spring.datasource.password=cfg@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-server.servlet.context-path=/api
-
+#server.servlet.context-path=/api
+spring.security.user.name=admin
+spring.security.user.password=adminPass
 
 
