--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Library_Management_System
 
 on:
@@ -17,6 +10,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: cfg@1234
+          MYSQL_DATABASE: library
+          MYSQL_USER: root
+          MYSQL_PASSWORD: cfg@1234
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping --host=localhost --user=root --password=cfg@1234" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
@@ -28,6 +33,7 @@ jobs:
 
 #    - name: Setup Gradle
 #      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+
     - name: Grant execute permission for Gradle
       run: chmod +x gradlew
 
@@ -36,4 +42,8 @@ jobs:
 
     - name: Run Tests
       run: ./gradlew test
+      env:
+        SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/library
+        SPRING_DATASOURCE_USERNAME: root
+        SPRING_DATASOURCE_PASSWORD: cfg@1234
 
