--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Build with Gradle Wrapper
         run: ./gradlew clean build
 
-      - name: Run Tests
-        run: ./gradlew test
+#      - name: Run Tests
+#        run: ./gradlew test
