--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,3 +51,9 @@ jobs:
           SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/library
           SPRING_DATASOURCE_USERNAME: root
           SPRING_DATASOURCE_PASSWORD: cfg@1234
+
+      - name: Upload JAR file
+        uses: actions/upload-artifact@v3
+        with:
+          name: library-management-system
+          path: build/libs/*.jar
